--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <body>
     <header>
       <div class="inner">
-        <div class="header"></div>
-        <div class=" icon fas fa-archway fa-3x"></div>
-        <div class="contact">Contact</div>
+        <div class="header">
+          <div class=" icon fas fa-archway fa-3x"></div>
+          <div class="contact">Contact</div>
+        </div>
       </div>
     </header>
     <main>
@@ -30,7 +31,6 @@
           <div class="section-contents work-left">
             <img src="./img/pc/pc.png" alt="">
           </div>
-          <div class="clearfix"></div>
           <div class="section-contents work-right">
             <h3 class="work-title">WORK</h3>
             <p class="work-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -38,6 +38,7 @@
               laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
               esse cillum dolore eu fugiat nulla pariatur. Excepteur sint</p>
           </div>
+        </div>
       </section>
       <section class="skills">
         <div class="inner skills-inner">
