--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         <div class="inner skills-inner">
           <h3 class="skills-title">WE ARE SKILLS</h3>
           <ul class="section-contents skills-contener">
-            <li class="skills_1"><a href="#"><img src="./img/skills/skills_1.png" alt=""></a></li>
-            <li class="skills_2"><a href="#"><img src="./img/skills/skills_2.png" alt=""></a></li>
-            <li class="skills_3"><a href="#"><img src="./img/skills/skills_3.png" alt=""></a></li>
-            <li class="skills_4"><a href="#"><img src="./img/skills/skills_4.png" alt=""></a></li>
-            <li class="skills_5"><a href="#"><img src="./img/skills/skills_5.png" alt=""></a></li>
-            <li class="skills_6"><a href="#"><img src="./img/skills/skills_6.png" alt=""></a></li>
+            <li class="skills"><a href="#"><img src="./img/skills/skills_1.png" alt=""></a></li>
+            <li class="skills"><a href="#"><img src="./img/skills/skills_2.png" alt=""></a></li>
+            <li class="skills"><a href="#"><img src="./img/skills/skills_3.png" alt=""></a></li>
+            <li class="skills"><a href="#"><img src="./img/skills/skills_4.png" alt=""></a></li>
+            <li class="skills"><a href="#"><img src="./img/skills/skills_5.png" alt=""></a></li>
+            <li class="skills"><a href="#"><img src="./img/skills/skills_6.png" alt=""></a></li>
           </ul>
         </div>
       </section>
