--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
           <div class="contact">Contact</div>
         </div>
       </div>
+      <div class="hamburger_menu">
+        <button class="hamburger">
+          <span class="hamburger_bar"></span>
+          <span class="hamburger_bar"></span>
+          <span class="hamburger_bar"></span>
+        </button>
+      </div>
     </header>
     <main>
       <section class="keyvisual">
