--- a/index.html
+++ b/index.html
@@ -15,14 +15,8 @@
         <div class="header">
           <div class=" icon fas fa-archway fa-3x"></div>
           <div class="contact">Contact</div>
+          <div class="hamburger_menu"><span></span><span></span><span></span></div>
         </div>
-      </div>
-      <div class="hamburger_menu">
-        <button class="hamburger">
-          <span class="hamburger_bar"></span>
-          <span class="hamburger_bar"></span>
-          <span class="hamburger_bar"></span>
-        </button>
       </div>
     </header>
     <main>
@@ -107,8 +101,8 @@
       </section>
       <section class="sns">
         <nav class="sns-nav">
-          <div class="inner sns-inner">
-            <div class="section-contents sns">
+          <div class="sns-inner">
+            <div class="sns-contents">
               <ul class="sns-icons">
                 <li class="icons"><a href="#" class="fab fa-facebook-f"></a></li>
                 <li class="icons"><a href="#" class="fab fa-dribbble"></a></li>
